ajustement traduction web

--- a/src/translations/cs_cm.json
+++ b/src/translations/cs_cm.json
@@ -75,7 +75,7 @@
     "claim.ClaimFilter.region": "Région",
     "claim.ClaimFilter.district": "District",
     "claim.claimStatus": "Statut de la facture",
-    "claim.code": "N° de la Facture",
+    "claim.code": "N° de prestation",
     "claim.guaranteeId": "N° de garantie",
     "claim.claimStatus.null": "tous",
     "claim.claimStatus.1": "Rejeté",
@@ -83,7 +83,7 @@
     "claim.claimStatus.4": "Vérifié",
     "claim.claimStatus.8": "Traité",
     "claim.claimStatus.16": "Évalué",
-    "claim.ClaimFilter.claimNo": "N° de la Facture",
+    "claim.ClaimFilter.claimNo": "N° de prestation",
     "claim.ClaimFilter.insureeCHFID": "N° de Bénéficiaire du chèque santé",
     "claim.visitDateFrom": "Date de visite à partir de",
     "claim.visitDateTo": "Date de visite jusqu'au",
@@ -261,7 +261,7 @@
     "insuree.FSP.title": "Premier point de Services médicaux",
     "insuree.Insuree.label": "Bénéficiaire du Chèque Santé",
     "insuree.Insuree.picker.dialog.title": "Rechercher un(e) Bénéficiaire du Chèque Santé",
-    "insuree.Insuree.chfId": "N° du Bénéficiaire du Chèque Santé",
+    "insuree.Insuree.chfId": "N° du Chèque Santé",
     "insuree.Insuree.lastName": "Nom de Bénéficiaire",
     "insuree.Insuree.otherNames": "Autres noms",
     "location.HealthFacilityFullPath.region": "Région",
@@ -666,7 +666,7 @@
     "insuree.insureeSummaries": "{count} Bénéficiaires du Chèque Santé Trouvé(e)s",
     "insuree.insureeSummaries.openNewTabButton.tooltip": "Ouvrir dans un nouvel onglet",
     "insuree.insureeSummaries.openFamilyButton.tooltip": "Ouvrir la Bénéficiaire du Bénéficiaire du Chèque Santé",
-    "insuree.insureeSummaries.insuranceNo": "N° du Bénéficiaire du Chèque Santé",
+    "insuree.insureeSummaries.insuranceNo": "N° du Chèque Santé",
     "insuree.insureeSummaries.lastName": "Nom de Bénéficiaire",
     "insuree.insureeSummaries.otherNames": "Prénom",
     "insuree.insureeSummaries.phone": "Téléphone",
