--- a/src/translations/cs_cm.json
+++ b/src/translations/cs_cm.json
@@ -262,7 +262,7 @@
     "insuree.Insuree.label": "Bénéficiaire du Chèque Santé",
     "insuree.Insuree.picker.dialog.title": "Rechercher un(e) Bénéficiaire du Chèque Santé",
     "insuree.Insuree.chfId": "N° du Chèque",
-    "insuree.Insuree.lastName": "Nom de Bénéficiaire",
+    "insuree.Insuree.lastName": "Nom de l'utilisateur",
     "insuree.Insuree.otherNames": "Autres noms",
     "location.HealthFacilityFullPath.region": "Région",
     "location.HealthFacilityFullPath.district": "District",
@@ -283,9 +283,9 @@
     "medical.ServicePicker.placehoder": "Recherche une Prestation de soin",
     "medical.visitType": "Type de prestation",
     "medical.visitType.null": "tous",
-    "medical.visitType.E": "Complication",
-    "medical.visitType.R": "Référence",
-    "medical.visitType.O": "Prestations Forfaitaires",
+    "medical.visitType.E": "Suivi de la grossesse et ses complications",
+    "medical.visitType.R": "Suivi des Accouchements et  ses complications",
+    "medical.visitType.O": "Suivi post partum, et  néonatal jusqu’au 42ème jour y compris les complications",
     "medical.careType": "Type de Prestations de soins",
     "medical.careType.null": "tous",
     "medical.careType.I": "Hospitalisé",
@@ -567,7 +567,7 @@
     "insuree.familySummaries": "{count} Bénéficiaires trouvés",
     "insuree.familySummaries.openNewTabButton.tooltip": "Ouvrir dans un nouvel onglet",
     "insuree.familySummaries.insuranceNo": "N° d'ins. du Resp.",
-    "insuree.familySummaries.lastName": "Nom de Bénéficiaire",
+    "insuree.familySummaries.lastName": "Nom de l'utilisateur",
     "insuree.familySummaries.otherNames": "Prénom",
     "insuree.familySummaries.email": "E-mail",
     "insuree.familySummaries.phone": "Tel.",
@@ -580,7 +580,7 @@
     "insuree.familySummaries.openNewTab": ".",
     "insuree.familySummaries.delete": ".",
     "insuree.familySummaries.deleteFamily.tooltip": "Supprimer la Bénéficiaire",
-    "insuree.Family.headInsuree.lastName": "Nom de Bénéficiaire",
+    "insuree.Family.headInsuree.lastName": "Nom de l'utilisateur",
     "insuree.Family.headInsuree.otherNames": "Prénom",
     "insuree.Family.headInsuree.chfId": "Numéro Chèque",
     "insuree.Family.headInsuree.email": "E-mail",
@@ -667,7 +667,7 @@
     "insuree.insureeSummaries.openNewTabButton.tooltip": "Ouvrir dans un nouvel onglet",
     "insuree.insureeSummaries.openFamilyButton.tooltip": "Ouvrir la Bénéficiaire du Bénéficiaire du Chèque Santé",
     "insuree.insureeSummaries.insuranceNo": "N° du Chèque",
-    "insuree.insureeSummaries.lastName": "Nom de Bénéficiaire",
+    "insuree.insureeSummaries.lastName": "Nom de l'utilisateur",
     "insuree.insureeSummaries.otherNames": "Prénom",
     "insuree.insureeSummaries.phone": "Téléphone",
     "insuree.insureeSummaries.email": "Email",
@@ -1132,7 +1132,7 @@
     "admin.user.email": "Email",
     "admin.user.districts": "Districts",
     "admin.user.regions": "Régions",
-    "admin.user.lastName": "Nom de Bénéficiaire",
+    "admin.user.lastName": "Nom de l'utilisateur",
     "admin.user.language": "Langue de l'interface",
     "admin.user.openNewTab": "Ouvrir dans un nouvel onglet",
     "admin.user.otherNames": "Prénoms",
