ajustement Traduction CM

--- a/src/translations/cs_cm.json
+++ b/src/translations/cs_cm.json
@@ -262,7 +262,7 @@
     "insuree.Insuree.label": "Bénéficiaire du Chèque Santé",
     "insuree.Insuree.picker.dialog.title": "Rechercher un(e) Bénéficiaire du Chèque Santé",
     "insuree.Insuree.chfId": "N° du Chèque",
-    "insuree.Insuree.lastName": "Nom de l'utilisateur",
+    "insuree.Insuree.lastName": "Nom de Bénéficiaire",
     "insuree.Insuree.otherNames": "Autres noms",
     "location.HealthFacilityFullPath.region": "Région",
     "location.HealthFacilityFullPath.district": "District",
@@ -567,7 +567,7 @@
     "insuree.familySummaries": "{count} Bénéficiaires trouvés",
     "insuree.familySummaries.openNewTabButton.tooltip": "Ouvrir dans un nouvel onglet",
     "insuree.familySummaries.insuranceNo": "N° d'ins. du Resp.",
-    "insuree.familySummaries.lastName": "Nom de l'utilisateur",
+    "insuree.familySummaries.lastName": "Nom de Bénéficiaire",
     "insuree.familySummaries.otherNames": "Prénom",
     "insuree.familySummaries.email": "E-mail",
     "insuree.familySummaries.phone": "Tel.",
@@ -580,7 +580,7 @@
     "insuree.familySummaries.openNewTab": ".",
     "insuree.familySummaries.delete": ".",
     "insuree.familySummaries.deleteFamily.tooltip": "Supprimer la Bénéficiaire",
-    "insuree.Family.headInsuree.lastName": "Nom de l'utilisateur",
+    "insuree.Family.headInsuree.lastName": "Nom de Bénéficiaire",
     "insuree.Family.headInsuree.otherNames": "Prénom",
     "insuree.Family.headInsuree.chfId": "Numéro Chèque",
     "insuree.Family.headInsuree.email": "E-mail",
@@ -667,7 +667,7 @@
     "insuree.insureeSummaries.openNewTabButton.tooltip": "Ouvrir dans un nouvel onglet",
     "insuree.insureeSummaries.openFamilyButton.tooltip": "Ouvrir la Bénéficiaire du Bénéficiaire du Chèque Santé",
     "insuree.insureeSummaries.insuranceNo": "N° du Chèque",
-    "insuree.insureeSummaries.lastName": "Nom de l'utilisateur",
+    "insuree.insureeSummaries.lastName": "Nom de Bénéficiaire",
     "insuree.insureeSummaries.otherNames": "Prénom",
     "insuree.insureeSummaries.phone": "Téléphone",
     "insuree.insureeSummaries.email": "Email",
