Added FR (no country) translations - with import/export lines (tools)

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,7 +1,7 @@
 {
     "appName": "openIMIS",
     "close": "Fermer",
-    "currency": "F",
+    "currency": "$",
     "rowsPerPage": "Lignes par page",
     "ofPages": "de",
     "selectAll": "Sélectionner tout",
@@ -629,74 +629,10 @@
     "insuree.ProfessionPicker.label": "Profession",
     "insuree.Profession.null": "Tout",
     "insuree.Profession.none": "Aucun",
-    "insuree.Profession.1": "Agriculteur",
-    "insuree.Profession.2": "Transporteur",
-    "insuree.Profession.3": "Eleveur",
-    "insuree.Profession.4": "Artisan",
-    "insuree.Profession.5": "Chef d'entreprise",
-    "insuree.Profession.6": "Profession libérale",
-    "insuree.Profession.7": "Autres fonctionnaires",
-    "insuree.Profession.8": "Professionnel de l'information",
-    "insuree.Profession.9": "Professionnel des arts et des spectacles",
-    "insuree.Profession.10": "Cadre d'entreprise",
-    "insuree.Profession.11": "Agent de santé",
-    "insuree.Profession.12": "Clergé, religieux",
-    "insuree.Profession.13": "Techniciens",
-    "insuree.Profession.14": "Forces de l'ordre",
-    "insuree.Profession.15": "Ouvriers",
-    "insuree.Profession.16": "Chauffeur",
-    "insuree.Profession.17": "Sans emploi",
-    "insuree.Profession.18": "Elèves, étudiants",
-    "insuree.Profession.19": "Retraité",
-    "insuree.Profession.20": "Jardiniers",
-    "insuree.Profession.21": "Maçons",
-    "insuree.Profession.22": "Menuisiers",
-    "insuree.Profession.23": "Plombiers",
-    "insuree.Profession.24": "Peintres",
-    "insuree.Profession.25": "Electriciens",
-    "insuree.Profession.26": "Boucher",
-    "insuree.Profession.27": "Coiffeur",
-    "insuree.Profession.28": "Nettoyeur",
-    "insuree.Profession.29": "Fleuristes",
-    "insuree.Profession.30": "Pombiste",
-    "insuree.Profession.31": "Employé de petit restaurant, café-restaurant",
-    "insuree.Profession.32": "Employé d'hôtel",
-    "insuree.Profession.33": "Forgeron",
-    "insuree.Profession.34": "Piroguiers",
-    "insuree.Profession.35": "Banquiers",
-    "insuree.Profession.36": "Enseignants",
-    "insuree.Profession.37": "Mécanicien",
-    "insuree.Profession.38": "Réparateur  d'apparels",
-    "insuree.Profession.39": "Agents Bureautique",
-    "insuree.Profession.40": "Cambiste",
-    "insuree.Profession.41": "Travailleur de Bois",
-    "insuree.Profession.42": "Vulganisateur",
-    "insuree.Profession.43": "Domestique et assimilés",
-    "insuree.Profession.44": "Exploitants de Moulins",
-    "insuree.Profession.45": "Conducteur d'engins",
-    "insuree.Profession.46": "Ouvrier agricole",
-    "insuree.Profession.47": "Pêcheur",
-    "insuree.Profession.48": "Couturier",
-    "insuree.Profession.49": "Personnel des ONG et Association",
-    "insuree.Profession.50": "Transformation agro-alimentaire",
-    "insuree.Profession.51": "Relais",
-    "insuree.Profession.52": "Pharmacien",
-    "insuree.Profession.53": "Matrones",
-    "insuree.Profession.54": "Conseillers Municipaux",
-    "insuree.Profession.55": "Chef de Village/quartier/Tribu",
-    "insuree.Profession.56": "COGES",
-    "insuree.Profession.57": "Transitaire",
-    "insuree.Profession.58": "Griots",
-    "insuree.Profession.59": "Artistes",
-    "insuree.Profession.60": "Exploitants taxi motos",
-    "insuree.Profession.61": "Exploitants taxi de brousse",
-    "insuree.Profession.62": "Animateur radio",
-    "insuree.Profession.63": "Photographe",
-    "insuree.Profession.64": "Boutiquiers",
-    "insuree.Profession.65": "Boulangiers",
-    "insuree.Profession.66": "tradipraticiens",
-    "insuree.Profession.67": "Marabout",
-    "insuree.Profession.68": "Commerçant",
+    "insuree.Profession.1": "Femme au foyer",
+    "insuree.Profession.2": "Employé",
+    "insuree.Profession.3": "Travailleur indépendant",
+    "insuree.Profession.4": "Autre",
     "insuree.RelationPicker.label": "Relation",
     "insuree.Relation.null": "Tout",
     "insuree.Relation.none": "Aucun",
@@ -1047,7 +983,7 @@
     "medical.serviceLevel.S": "Soin ordinaire",
     "medical.serviceLevel.V": "Visite",
     "medical.serviceLevel.D": "Hôpital de jour",
-    "medical.serviceLevel.H": "Soins hospitaliers",
+    "medical.serviceLevel.H": "Cas d'hospitalisation",
     "medical.patientCategory.1": "Masculin",
     "medical.patientCategory.2": "Féminin",
     "medical.patientCategory.4": "Adulte",
@@ -1160,7 +1096,7 @@
     "core.roleManagement.DeleteRole.mutationLabel": "Supprimer le rôle {label}",
     "core.roleManagement.deleteButton.tooltip": "Supprimer",
     "core.roleManagement.deleteRole.confirm.title": "Voulez-vous vraiment supprimer {label} ?",
-    "core.roleManagement.deleteRole.confirm.message": "Supprimer des données ne signifie pas les effacer d'OpenIMIS. Les données ne seront désactivées que dans la liste consultée.",
+    "core.roleManagement.deleteRole.confirm.message": "Supprimer des données ne signifie pas les effacer d'openIMIS. Les données ne seront désactivées que dans la liste consultée.",
     "core.roleManagement.UpdateRole.mutationLabel": "Mettre à jour le rôle {label}",
     "core.roleManagement.editButton.tooltip": "Éditer",
     "core.roleManagement.updateRole.confirm.title": "Sauver les changements dans {label} ?",
@@ -1443,7 +1379,7 @@
     "policyHolder.dialog.create": "Créer",
     "policyHolder.dialog.update": "Sauvez",
     "policyHolder.dialog.replace": "Ajouter",
-    "policyHolder.dialog.delete.message": "La suppression des données ne signifie pas leur effacement de la base de données OpenIMIS. La donnée sera seulement désactivée de la liste consultée.",
+    "policyHolder.dialog.delete.message": "La suppression des données ne signifie pas leur effacement de la base de données openIMIS. La donnée sera seulement désactivée de la liste consultée.",
     "policyHolder.CreatePolicyHolderInsuree.mutationLabel": "Création d'un titulaire de police d'assurance pour {code} - {nom du commerce}",
     "policyHolder.UpdatePolicyHolderInsuree.mutationLabel": "Mise à jour du titulaire de la police d'assurance de {code} - {nom commercial}",
     "policyHolder.DeletePolicyHolderInsuree.mutationLabel": "Supprimer le titulaire de la police d'assurance de {code} - {nom commercial}.",
@@ -1719,7 +1655,7 @@
     "contract.deleteButton.tooltip": "Supprimer",
     "contract.DeleteContract.mutationLabel": "Supprimer le contrat {label}",
     "contract.deleteContract.confirm.title": "Etes-vous sûr de vouloir supprimer {label} ?",
-    "contract.deleteContract.confirm.message": "La suppression des données ne signifie pas leur effacement de la base de données OpenIMIS. La donnée sera seulement désactivée de la liste consultée.",
+    "contract.deleteContract.confirm.message": "La suppression des données ne signifie pas leur effacement de la base de données openIMIS. La donnée sera seulement désactivée de la liste consultée.",
     "contract.contractDetails.label": "Détails du contrat",
     "contract.contractDetails.searcher.title": "{contractDetailsTotalCount} Détails du contrat trouvés",
     "contract.contractDetails.tabDisabledError": "Pour commencer à créer de nouveaux détails du contrat, vous devez remplir les champs d'informations générales et cliquer sur Enregistrer.",
@@ -1853,7 +1789,6 @@
     "paymentPlan.UpdatePaymentPlan.mutationLabel": "Mise à jour du plan de paiement - {label}",
     "paymentPlan.DeletePaymentPlan.mutationLabel": "Supprimer le plan de paiement - {label}",
     "paymentPlan.ReplacePaymentPlan.mutationLabel": "Remplacer le plan de paiement - {label}",
-    "insuree.InsureeNumberInput.error": "Numéro d'assuré invalide",
     "mainMenu": "Juridique et financier",
     "menu": {
         "invoices": "Factures",
@@ -1902,7 +1837,7 @@
         "delete": {
             "confirm": {
                 "title": "Supprimer {code} ?",
-                "message": "La suppression des données ne signifie pas leur effacement de la base de données OpenIMIS. La donnée sera seulement désactivée de la liste consultée."
+                "message": "La suppression des données ne signifie pas leur effacement de la base de données openIMIS. La donnée sera seulement désactivée de la liste consultée."
             },
             "mutationLabel": "Supprimer la facture {code}"
         }
@@ -1959,7 +1894,7 @@
         "delete": {
             "confirm": {
                 "title": "Supprimer {invoicePaymentLabel} ?",
-                "message": "La suppression des données ne signifie pas leur effacement de la base de données OpenIMIS. La donnée sera seulement désactivée de la liste consultée."
+                "message": "La suppression des données ne signifie pas leur effacement de la base de données openIMIS. La donnée sera seulement désactivée de la liste consultée."
             },
             "mutationLabel": "Supprimer le paiement de la facture {invoicePaymentLabel} de {invoiceCode}."
         }
@@ -2019,7 +1954,7 @@
         "delete": {
             "confirm": {
                 "title": "Supprimer {code} ?",
-                "message": "La suppression des données ne signifie pas leur effacement de la base de données OpenIMIS. La donnée sera seulement désactivée de la liste consultée."
+                "message": "La suppression des données ne signifie pas leur effacement de la base de données openIMIS. La donnée sera seulement désactivée de la liste consultée."
             },
             "mutationLabel": "Supprimer le projet de loi {code}"
         }
@@ -2078,7 +2013,7 @@
         "delete": {
             "confirm": {
                 "title": "Supprimer {billPaymentLabel} ?",
-                "message": "La suppression des données ne signifie pas leur effacement de la base de données OpenIMIS. La donnée sera seulement désactivée de la liste consultée."
+                "message": "La suppression des données ne signifie pas leur effacement de la base de données openIMIS. La donnée sera seulement désactivée de la liste consultée."
             },
             "mutationLabel": "Supprimer le paiement de la facture {billPaymentLabel} de {billCode}."
         }
@@ -2172,6 +2107,86 @@
     "insuree.Insuree.deathreason": "Raison du décès",
     "claim.ClaimFilter.processedDateFrom": "Traité à partir de",
     "claim.ClaimFilter.processedDateTo": "Traité jusqu'à",
-    "claim.claimSummaries.processedDate": "Traité le"
-
+    "claim.claimSummaries.processedDate": "Traité le",
+    "claim.edit.services.code": "",
+    "claim.edit.services.name": "",
+    "claim.edit.services.priceAppro": "",
+    "tools.RegistersPage.cancelBtn": "Annuler",
+    "tools.RegistersPage.UploadDialog.confirmLocations": "Voulez-vous vraiment téléverser une nouvelle liste de sites ?",
+    "tools.RegistersPage.UploadDialog.confirmHF": "Voulez-vous vraiment téléverser une nouvelle liste d'installations de santé ?",
+    "tools.RegistersPage.UploadDialog.confirmDiagnoses": "Voulez-vous vraiment téléverser une nouvelle liste de diagnostics ?",
+    "tools.RegistersPage.UploadDialog.confirmItems": "Voulez-vous vraiment téléverser une nouvelle liste de produits médicaux ?",
+    "tools.RegistersPage.items.uploadLabel": "Téléverser produits médicaux",
+    "tools.RegistersPage.items.downloadLabel": "Télécharger produits médicaux",
+    "tools.ExtractsPage.OfficerDownloadBlock.title": "",
+    "tools.ExtractsPage.OfficerDownloadBlock.officerLabel": "",
+    "tools.ExtractsPage.OfficerDownloadBlock.downloadFeedbacksBtn": "",
+    "tools.ExtractsPage.OfficerDownloadBlock.downloadRenewalsBtn": "",
+    "tools.ExtractsPage.EnrollmentsUploadBlock.title": "",
+    "tools.ExtractsPage.EnrollmentsUploadBlock.uploadBtn": "",
+    "tools.ExtractsPage.ClaimsUploadBlock.title": "",
+    "tools.ExtractsPage.ClaimsUploadBlock.uploadBtn": "",
+    "tools.ExtractsPage.ClaimsUploadBlock.ResultDialog.okBtn": "",
+    "tools.ExtractsPage.ClaimsUploadBlock.ResultDialog.success": "",
+    "tools.ExtractsPage.ClaimsUploadBlock.ResultDialog.title": "",
+    "tools.ExtractsPage.FeedbacksUploadBlock.title": "",
+    "tools.ExtractsPage.FeedbacksUploadBlock.uploadBtn": "",
+    "tools.ExtractsPage.FeedbacksUploadBlock.ResultDialog.okBtn": "",
+    "tools.ExtractsPage.FeedbacksUploadBlock.ResultDialog.success": "",
+    "tools.ExtractsPage.FeedbacksUploadBlock.ResultDialog.title": "",
+    "tools.ExtractsPage.RenewalsUploadBlock.title": "",
+    "tools.ExtractsPage.RenewalsUploadBlock.uploadBtn": "",
+    "tools.ExtractsPage.RenewalsUploadBlock.ResultDialog.okBtn": "",
+    "tools.ExtractsPage.RenewalsUploadBlock.ResultDialog.success": "",
+    "tools.ExtractsPage.RenewalsUploadBlock.ResultDialog.title": "",
+    "tools.ExtractsPage.DownloadMasterData.title": "",
+    "tools.ExtractsPage.DownloadMasterData.downloadBtn": "",
+    "tools.ExtractsPage.ResultDialog.okBtn": "Ok",
+    "tools.ReportForm.title": "",
+    "tools.ReportForm.unknownReport": "",
+    "tools.ReportSearcher.tableTitle": "",
+    "tools.report.name": "",
+    "tools.report.module": "",
+    "tools.report.validityFrom": "",
+    "tools.report.description": "",
+    "tools.report.definition": "",
+    "tools.ReportDefinitionEditor.title": "",
+    "tools.ReportSearcher.editBtn": "",
+    "tools.ReportDefinitionEditor.cancel": "",
+    "tools.ReportDefinitionEditor.resetToDefault": "",
+    "tools.ReportPicker.label": "",
+    "tools.GenerateReportPicker.title": "",
+    "tools.GenerateReportPicker.cancelBtn": "",
+    "tools.GenerateReportPicker.generateBtn": "",
+    "tools.GenerateReportPicker.formatLabel": "",
+    "tools.GenerateReportPicker.triggerBtn": "",
+    "tools.RegistersPage.itemsBlockTitle": "Produits médicaux",
+    "tools.RegistersPage.servicesBlockTitle": "Soins",
+    "menu.invoices": "",
+    "menu.bills": "",
+    "HealthFacilityPicker.placeholder": "",
+    "showReconciledOnly": "",
+    "contribution.alreadyUsed": "",
+    "location.HealthFacilityForm.codeTaken": "",
+    "admin.user.usernameAlreadyTaken": "",
+    "medical_pricelist.nameTaken": "Nom déjà pris.",
+    "location.EditDialog.codeTaken": "",
+    "medical.codeTaken": "Ce code est déjà enregistré.",
+    "product.alreadyTaken": "",
+    "admin.user.emailAlreadyTaken": "",
+    "policy.dialogActions.continue": "",
+    "policy.dialogActions.goBack": "",
+    "tools.formatPicker": "Format",
+    "tools.formatPicker.csv": "CSV",
+    "tools.formatPicker.json": "JSON",
+    "tools.formatPicker.null": "Sélectionnez un format",
+    "tools.formatPicker.xls": "XLS",
+    "tools.formatPicker.xlsx": "XLSX",
+    "tools.formatPicker.xml": "XML",
+    "tools.RegistersPage.UploadDialog.confirmServices": "Voulez-vous vraiment téléverser une nouvelle liste de soins ?",
+    "tools.RegistersPage.services.uploadLabel": "Téléverser soins",
+    "tools.RegistersPage.services.downloadLabel": "Télécharger soins",
+    "tools.RegistersPage.UploadDialog.skipped": "Ignorés :",
+    "tools.RegistersPage.UploadDialog.invalid": "Non valides :",
+    "tools.RegistersPage.UploadDialog.failed": "Échoués :"
 }
